# flow_grpo

./: .gitignore  logs_pickscore_experiment_2511.txt  pyproject.toml  setup.py  test_pickscore.py
config/: grpo.py
flow_grpo/: fsdp_utils.py  rewards.py
flow_grpo/bagel/modeling/bagel/: qwen2_navit.py
scripts/: train_qwenimage_edit.py
scripts/single_node/: grpo_qwenimage_edit.sh
