[project]
name = "flow-grpo"
version = "0.0.1"
description = "Flow matching training with GRPO for diffusion/flow models"
readme = "README.md"
requires-python = "==3.10.16"

dependencies = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "torchaudio",
    "transformers==4.55.0",
    "accelerate==1.4.0",
    "diffusers @ git+https://github.com/huggingface/diffusers@7a2b78bf0f788d311cc96b61e660a8e13e3b1e63",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "scikit-image==0.25.2",
    "albumentations==1.4.10",
    "opencv-python==4.11.0.86",
    "pillow==10.4.0",
    "tqdm==4.67.1",
    "wandb==0.18.7",
    "pydantic==2.10.6",
    "requests==2.32.3",
    "matplotlib==3.10.0",
    "deepspeed==0.16.4",
    "peft>=0.10.0",
    # "bitsandbytes==0.45.3",
    "aiohttp==3.11.13",
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "huggingface-hub>=0.29.1",
    "datasets==3.3.2",
    "tokenizers>=0.19.1",
    "einops==0.8.1",
    "nvidia-ml-py==12.570.86",
    "xformers",
    "absl-py",
    "ml_collections",
    "sentencepiece",
    "openai",
    "timm>=1.0.20",
    "lightning>=2.5.5",
]

[dependency-groups]
dev = [
  "ipython==8.34.0",
  "black==24.2.0",
  "pytest==8.2.0",
]

